z-index fix

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -7983,7 +7983,7 @@ text-align: left;
       position: absolute;
       left: 1rem;
       top: 0;
-      z-index: 11;
+      z-index: 1;
     }
   }
   .miarka-wrapper {
